fix dark mode navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body.dark-mode {
     --text-secondary: #c0b7aa;
     --text-light: #4a3f35;
     --text-brown: #665847;
-    --text-active: #faf7f2;
+    --text-active: #f5efe6;
 
 }
 
